[gd_scene load_steps=8 format=3 uid="uid://b8667a1mo60sc"]

[ext_resource type="PackedScene" uid="uid://bf0bee4xqit16" path="res://player.tscn" id="1_6mhkd"]
[ext_resource type="Script" path="res://main.gd" id="1_e85tn"]
[ext_resource type="PackedScene" uid="uid://x6onedc75hoj" path="res://mob.tscn" id="2_dbg11"]
[ext_resource type="PackedScene" uid="uid://b3rtwqhfnwyec" path="res://hud.tscn" id="4_r4sl5"]
[ext_resource type="AudioStream" uid="uid://ch3fn5bjhuf44" path="res://art/House In a Forest Loop.ogg" id="5_mg7n8"]
[ext_resource type="AudioStream" uid="uid://dx3uvpukjvv56" path="res://art/gameover.wav" id="6_gyem0"]

[sub_resource type="Curve2D" id="Curve2D_qe8mm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_e85tn")
mob_scene = ExtResource("2_dbg11")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.933543, 0.86203, 0.831036, 1)

[node name="Player" parent="." instance=ExtResource("1_6mhkd")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_qe8mm")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_r4sl5")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mg7n8")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gyem0")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
